# cpp-boilerplate-minimal

./: .gitignore  CMakeLists.txt  README.md
cmake/: compiler_definitions.cmake  constants.cmake  func_macro.cmake  options.cmake
config/: logger.cfg
include/compat/: tr1_memory.h
include/utils/: minerrutils.h  ocv-interop.h
prj.core/: CMakeLists.txt
prj.sandbox/: CMakeLists.txt
prj.sandbox/camshift/: CMakeLists.txt
prj.sandbox/camshift/src/: camshiftdemo.cpp
prj.third/: CMakeLists.txt
prj.third/json-cpp/: CMakeLists.txt
prj.third/json-cpp/src/: json_reader.cpp  json_value.cpp  json_writer.cpp
prj.third/leptonica/: CMakeLists.txt  adaptmap.c  affine.c  affinecompose.c  allheaders.h  alltypes.h  arithlow.c  array.h  arrayaccess.c  arrayaccess.h  bardecode.c  baseline.c  bbuffer.c  bbuffer.h  bilinear.c  binarize.c  binexpand.c  binexpandlow.c  binreduce.c  binreducelow.c  blend.c  bmf.c  bmf.h  bmp.h  bmpio.c  bmpiostub.c  boxbasic.c  boxfunc1.c  boxfunc2.c  boxfunc3.c  bytearray.c  ccbord.c  ccbord.h  ccthin.c  classapp.c  colorcontent.c  colormap.c  colormorph.c  colorquant1.c  colorquant2.c  (+142 more)
prj.third/libjpeg/: CMakeLists.txt
prj.third/libpng/: CMakeLists.txt  pngstruct.h
prj.third/libtiff/: CMakeLists.txt  tif_config.h.cmakein  tiffiop.h
prj.third/libwebp/: CMakeLists.txt
prj.third/libwebp/dsp/: dsp.h  lossless.c  upsampling_sse2.c
prj.third/libwebp/enc/: backward_references.h
prj.third/libwebp/utils/: bit_reader.h
prj.third/log4cplus/: CMakeLists.txt
prj.third/log4cplus/include/log4cplus/config/: defines.hxx.in
prj.third/zlib/: CMakeLists.txt
